--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
 body {
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  /*background: linear-gradient(to right, rgb(0, 255, 255), rgb(0, 64, 128));*/
-  background: linear-gradient(to right, rgb(0, 193, 193), rgb(12, 35, 63));
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  background: rgb(33,92,93);
+  background: linear-gradient(90deg, rgba(33,92,93,1) 0%, rgba(46,162,170,1) 38%, rgba(27,30,97,1) 100%);    
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
